fixed spacing

--- a/style.css
+++ b/style.css
@@ -6,19 +6,17 @@
 body {
   font-family: "inter", sans-serif;
   height: 1vh;
+  width: 1vw;
   background-color: whitesmoke;
-  position: relative;
+  margin: 2rem auto;
 }
 .container {
   display: grid;
-  width: 1000px;
-  margin: 0 auto;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 300px 0.6fr 0.3fr 0.1fr;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 1rem;
 }
 img {
   max-width: 500px;
@@ -37,6 +35,7 @@ h1 {
   line-height: 1;
   margin-top: 0;
   text-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.137);
+  width: 38rem;
 }
 
 .description {
@@ -45,6 +44,7 @@ h1 {
   justify-self: start;
   align-self: center;
   font-weight: 500;
+  width: 28rem;
 }
 p {
   font-size: 15px;
@@ -67,19 +67,15 @@ a:visited {
   padding: 1rem 1rem;
   border-radius: 10px 10px;
   align-items: flex-start;
-  margin-bottom: 8rem;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.1);
+  margin-right: 5rem;
 }
 
 .social {
   display: flex;
   justify-self: center;
   gap: 5rem;
-  padding-right: 4rem;
-  align-self: flex-start;
-  position: absolute;
-  bottom: -50rem;
-  left: 33rem;
+  margin-left: 5rem;
 }
 a.icon:link,
 a.icon:visited {
